# karton

./: .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG  Dockerfile  Dockerfile2  LICENSE  MANIFEST.in  README.md  __init__.py  build-and-deploy.sh  classifier.py  cleaner.py  conf.py  config.ini  config.ini.example  config.py  docker-compose.yml  exe.py  extractor.py  gateway.Dockerfile  housekeeper.py  karton.py  log.py  make_task.py  pyproject.toml  requirements.gateway.txt  requirements.txt  resource.py  setup.cfg  setup.py  simple_producer.py  splunk_logs.py  system-service.py  system.Dockerfile  task.py
.github/workflows/: publish.yml  release.yml  test.yml
_build/html/: .buildinfo  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_modules/karton/: karton.html  resource.html  task.html
_build/markdown/: index.md
certs/: certca.crt  karton.key  karton.pem
deploy/: deploy.json
deploy/docker/: Dockerfile  py2.Dockerfile  system.Dockerfile
deploy/k8s/: karton2-system.yml  redis.yml
dev/: docker-compose.yml  gateway.Dockerfile  gen_secret.sh  karton-vars.env  karton.ini.dev  karton.ini.docker  logger.Dockerfile  requirements.txt  stdout_logger.py  system.Dockerfile
docs/: advanced_concepts.rst  asyncio.rst  breaking_changes.rst  conf.py  examples.rst  forking-task.xml  getting_started.rst  how-to-run.md  index.rst  karton.rst  karton_api.rst  karton_attributes.graphml  karton_example_pipeline.graphml  karton_hierarchy.graphml  requirements.txt  rzeczy_mwdb.graphml  service_configuration.rst  service_examples.rst  task_headers_payloads.rst  unit_tests.rst  what_new.rst
docs/_build/doctrees/: environment.pickle  examples.doctree  index.doctree  karton.doctree
docs/_build/html/: .buildinfo  examples.html  genindex.html  index.html  karton.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/karton/: karton.html  resource.html  task.html
docs/_build/html/_sources/: examples.rst.txt  index.rst.txt  karton.rst.txt
docs/_build/html/_static/: documentation_options.js
karton/: __init__.py  base.py  config.py  housekeeper.py  karton.py  kpm  logger.py  manager.py  resource.py  rmq.py  task.py  test.py  utils.py
karton/core/: __init__.py  __version__.py  backend.py  base.py  config.py  exceptions.py  gateway_client.py  inspect.py  karton.py  logger.py  main.py  query.py  resource.py  serialization.py  task.py  test.py  utils.py
karton/core/asyncio/: __init__.py  backend.py  base.py  karton.py  logger.py  resource.py
karton/core/asyncio/backend/: __init__.py  base.py  direct.py  gateway.py
karton/core/backend/: __init__.py  base.py  direct.py  gateway.py
karton/gateway/: __init__.py  app.py  auth.py  backend.py  config.py  errors.py  logger.py  messages.py  models.py  operations.py  session.py  shutdown.py  task.py
karton/gateway/dashboard/: __init__.py  api_routes.py  models.py  operations.py  routes.py
karton/gateway/dashboard/static/graph/: graph.js  style.css
karton/gateway/dashboard/templates/: analysis.html  crashed.html  graph.html  index.html  layout.html  queue.html  queue_layout.html  services.html  task.html
karton/gateway/rest_api/: models.py  routes.py
karton/services/: system.py
karton/system/: __init__.py  __main__.py  system.py
karton/templates/: config.ini.template  deployment.yml.jinja2  karton.jinja2
karton/templates/deploy/: deploy.json.jinja2
karton/templates/deploy/docker/: Dockerfile.jinja2
karton/templates/deploy/k8s/: deployment.yml.jinja2
tests/: test_core.py  test_task_filters.py
tests/math_test_case/: math_karton.py  test_math_karton.py
tests/nested_resources_test_case/: multi_reverser_karton.py  test_multi_reverser_karton.py
tests/reverser_test_case/: reverser_karton.py  test_reverser_karton.py
