[build-system]
requires = [
    "setuptools >= 40.9.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "karton-core"
description = "Distributed malware analysis orchestration framework"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/CERT-Polska/karton"
Documentation = "https://karton-core.readthedocs.io/"
Repository = "https://github.com/CERT-Polska/karton"

[project.scripts]
karton-system = "karton.system:SystemService.main"
karton = "karton.core.main:main"

[tool.setuptools]
packages = ["karton.core", "karton.core.asyncio", "karton.gateway", "karton.system"]

[tool.setuptools.dynamic]
version = {attr = "karton.core.__version__.__version__"}
dependencies = { file = ["requirements.txt"] }
optional-dependencies.gateway = { file = ["requirements.gateway.txt"] }

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.lint-python]
lint-version = "2"
source = "karton/"
# Temporary workaround for Union[Awaitable[T]], T] mess in Redis typing
extra-requirements = "redis<5.0.0 botocore-stubs"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = "urllib3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aioboto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiobotocore.*"
ignore_missing_imports = true